--- a/LibraryStoreProcedure/LibraryStoreProcedure.csproj
+++ b/LibraryStoreProcedure/LibraryStoreProcedure.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connections\Helper.cs" />
+    <Compile Include="Enums\StoredProcs.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\BookRepo.cs" />
     <Compile Include="Models\Country.cs" />
